syntax = "proto3";

package auth;

message SignInUserRequest {
    required string email = 1;
    required string password = 2;
}

message SignInUserResponse {
    required string access_token = 1;
    required string refresh_token = 2;
}

